# Discord-Screenshare-Linux

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  pnpm-lock.yaml  test.js
.github/workflows/: build.yml
fridaexp/: frida.js  frida.py
include/: frida-core.h
lib/: binding.js
scripts/: install.sh  patch.js
src/: AudioDevice.cc  AudioDevice.h  DiscordInjector.cc  DiscordInjector.h  Hook.cc  Hook.h  Hooker.cc  Hooker.h  LogSinkImpl.cc  LogSinkImpl.h  desktop_capture.cc  desktop_capture.h  desktop_capture_source.cc  desktop_capture_source.h  discordpawgers.cc  frida-core-example.c  main.cc  testing.cc  testing.h
src/utils/: CustomEncoderFactory.cc  CustomEncoderFactory.h  PipeWire.cc  PipeWire.h  h264_encoder_impl.cc  h264_encoder_impl.h  threads.cc  threads.h  vaapi_encode.h
